welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:26: error: expected start of definition
	override def forward(i:Int)  { 
                 ^LineByLine:29: error: expected start of definition
	override def forward()  {
                 ^LineByLine:32: error: expected start of definition
	override def backward(i:Int) {
                 ^LineByLine:35: error: expected start of definition
	override def backward() {
                 ^LineByLine:38: error: Unmatched closing brace '}' ignored here
}
^